--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Head Ball VR / MR – Dark VR</title>
+  <title>Head Ball MR : Football Challenge – Dark VR</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -43,40 +43,41 @@
 </head>
 <body>
   <header>
-    <h1>Head Ball VR / MR</h1>
-    <p><em>Dark VR tarafından geliştirilen gerçek zamanlı çok oyunculu VR futbol deneyimi</em></p>
+    <h1>Head Ball MR : Football Challenge</h1>
+    <p><em>A fast-paced, real-time multiplayer MR soccer experience by Dark VR</em></p>
   </header>
 
   <section>
-    <h2>Açıklama</h2>
+    <h2>About</h2>
     <p>
-      Head Ball VR, 2v2, 3v3 veya 5v5 maçlara katılabileceğiniz, özelleştirilebilir avatarlar ve dinamik kamera açılarıyla eğlenceli bir VR futbol deneyimidir.
+      Head Ball VR puts you in the heart of the action with 2v2, 3v3, or epic 5v5 matches. Dive into fully immersive virtual stadiums, customize your avatar and kits, and compete against players worldwide.
     </p>
     <ul>
-      <li>Çok oyunculu maçlar: Arkadaşlarınızla veya dünyanın dört bir yanından rakiplerle eşleşin.</li>
-      <li>Dinamik Kamera Açıları: Kaleci bakışı, sideline görünümü ve üstten perspektif arasından geçiş yapın.</li>
-      <li>Özelleştirilebilir Kit ve Avatar: Forma, bot ve aksesuar kilidini açarak karakterinizi kişiselleştirin.</li>
-      <li>Seviye Atlama & Ödüller: Kazandığınız maçlar size yeni stadyumlar, toplar ve kozmetik ürünler kazandırır.</li>
-      <li>Gerçekçi Fizik Motoru: Rüzgâr, zemin sürtünmesi ve çarpışma efektleriyle her maçta yeni bir mücadele hissi yaşayın.</li>
+      <li><strong>Multiplayer Matches:</strong> Join quick matchmaking for 2v2, 3v3, or 5v5 battles. Team up with friends or challenge opponents around the globe.</li>
+      <li><strong>Dynamic Camera Angles:</strong> Switch between first-person goalkeeper view, sideline perspectives, and overhead angles to strategize every play.</li>
+      <li><strong>Customizable Avatars & Kits:</strong> Unlock new jerseys, boots, and accessories as you climb the leaderboards and personalize your character.</li>
+      <li><strong>Progression & Rewards:</strong> Earn experience points and in-game currency with each victory. Level up to unlock exclusive stadiums, soccer balls, and cosmetic items.</li>
+      <li><strong>Realistic Ball Physics:</strong> Experience authentic ball movement and environmental effects—wind, turf friction, and player collisions—powered by a next-generation VR physics engine.</li>
+      <li><strong>Voice & Gesture Controls:</strong> Coordinate with teammates using built-in voice chat and perform precise dribbles, passes, and shots with intuitive hand tracking.</li>
     </ul>
   </section>
 
   <section>
-    <h2>Destek & İletişim</h2>
-    <p>E-posta: <a href="mailto:support@headballvr.com">support@headballvr.com</a></p>
-    <p>GitHub Repo: <a href="https://github.com/ayhan-kara/headball-privacy" target="_blank">https://github.com/ayhan-kara/headball-privacy</a></p>
+    <h2>Support & Contact</h2>
+    <p>If you need help or have questions, email us at <a href="mailto:ayhankara_01@hotmail.com">ayhankara_01@hotmail.com</a>.</p>
+    <p>GitHub Repository: <a href="https://github.com/ayhan-kara/headball-privacy" target="_blank">https://github.com/ayhan-kara/headball-privacy</a></p>
   </section>
 
   <section>
-    <h2>Linkler</h2>
+    <h2>Links</h2>
     <p>
-      <a class="button" href="privacy-policy.html" target="_blank">Gizlilik Politikası</a>
-      <a class="button" href="https://ayhan-kara.github.io/headball-privacy/" target="_blank">Ana Sayfa</a>
+      <a class="button" href="privacy-policy.html" target="_blank">Privacy Policy</a>
+      <a class="button" href="https://ayhan-kara.github.io/headball-privacy/" target="_blank">Main Page</a>
     </p>
   </section>
 
   <footer>
-    <p><small>© 2025 Dark VR. Tüm hakları saklıdır.</small></p>
+    <p><small>© 2025 Dark VR. All rights reserved.</small></p>
   </footer>
 </body>
 </html>
